--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>hello</h1>
+  <p>A website where patient can book appointment sand interact with doctors</p>
 </body>
 </html>
